natsumi/modules/nova-patches.css
/*

Natsumi Browser - Welcome to your personal internet.

Copyright (c) 2024-present Green (@greeeen-dev)

Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the "Software"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all
copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
SOFTWARE.

*/

/* ==== Firefox Nova patches ==== */

@media -moz-pref("browser.nova.enabled") {
  /* Standard mode */
  @media not -moz-pref("natsumi.theme.islands") {
    #navigator-toolbox {
      margin-block-end: unset !important;

      @media -moz-pref("sidebar.position_start") {
        margin: 0 !important;
      }

      @media not -moz-pref("sidebar.position_start") {
        margin-top: 0 !important;
        margin-right: 0 !important;
      }
    }

    #browser {
      padding: 0 !important;
      gap: 0 !important;
    }

    #sidebar-main {
      border: 0 !important;
      border-radius: 0 !important;
      background-color: transparent !important;
    }

    #sidebar-launcher-splitter {
      margin-inline: -6px 0 !important;
    }

    body:not([natsumi-compact-mode]) {
      #navigator-toolbox {
        border-radius: 0 !important;
        background-image: none !important;
      }

      #sidebar-main {
        @media -moz-pref("sidebar.position_start") {
          margin-right: 2px !important;
        }

        @media not -moz-pref("sidebar.position_start") {
          margin-left: 2px !important;
        }
      }
    }

    @media (
      not -moz-pref("natsumi.theme.compact-style", "toolbar")
    ) or -moz-pref("natsumi.theme.single-toolbar") {
      #navigator-toolbox {
        border-radius: 0 !important;
        background-image: none !important;
      }
    }

    @media -moz-pref("natsumi.theme.single-toolbar") {
      body:not([natsumi-compact-mode]) #PersonalToolbar {
        --natsumi-bookmarks-separation: 0px !important;
        max-width: calc(var(--natsumi-bookmarks-width) - var(--natsumi-browser-separation)) !important;

        @media not -moz-pref("sidebar.position_start") {
          --natsumi-bookmarks-override: calc(var(--natsumi-sidebar-width) + var(--natsumi-browser-separation));
        }
      }
    }
  }

  /* Islands mode */
  @media -moz-pref("natsumi.theme.islands") {
    * {
      --chrome-window-gap: var(--natsumi-browser-separation);
      --natsumi-browser-border-color: var(--chrome-content-separator-color) !important;
    }

    #navigator-toolbox {
      background-image: none !important;
      background-color: var(--toolbar-background-color) !important;
      border: 1px solid var(--chrome-content-separator-color) !important;
    }

    #sidebar-splitter, #sidebar-launcher-splitter {
      margin-inline: calc(var(--natsumi-browser-separation) / -2 - 2px) !important;
      max-width: 4px !important;
    }

    #natsumi-pinned-toolbar {
      border: 1px solid transparent !important;
    }

    body:not([natsumi-compact-mode]) {
      #tabbrowser-tabbox {
        --natsumi-tabbox-margin-override: 0;
      }

      #browser::before {
        margin-left: calc(var(--natsumi-browser-separation) * -1) !important;
      }

      #browser::after {
        margin-left: calc(var(--natsumi-browser-separation) * -1) !important;
      }

      #natsumi-pinned-toolbar {
        translate: var(--natsumi-browser-separation) calc(var(--natsumi-browser-separation) * 2) !important;

        @media not -moz-pref("sidebar.position_start") {
          translate: calc(var(--natsumi-browser-separation) * -1) calc(var(--natsumi-browser-separation) * 2) !important;
        }

        @media -moz-pref("natsumi.theme.single-toolbar") {
          --natsumi-toolbar-override: calc(var(--natsumi-browser-separation) * -1);
        }
      }

      #sidebar-box {
        margin-bottom: 0 !important;

        @media -moz-pref("sidebar.position_start") {
          border-radius: 0 var(--natsumi-browser-border-radius) var(--natsumi-browser-border-radius) 0 !important;
        }

        @media not -moz-pref("sidebar.position_start") {
          border-radius: var(--natsumi-browser-border-radius) 0 0 var(--natsumi-browser-border-radius) !important;
        }

        #sidebar {
          border-radius: 0 !important;
        }
      }

      @media -moz-pref("natsumi.theme.single-toolbar") {
        #navigator-toolbox {
          border-radius: 0 !important;
          background-image: none !important;
        }

        #PersonalToolbar {
          max-width: calc(var(--natsumi-bookmarks-width) - var(--natsumi-browser-separation)) !important;
          --natsumi-bookmarks-override: calc(var(--natsumi-sidebar-width) + var(--natsumi-browser-separation));

          @media not -moz-pref("sidebar.position_start") {
            --natsumi-bookmarks-override: calc(var(--natsumi-sidebar-width) + calc(var(--natsumi-browser-separation) * 2));
          }
        }
      }
    }

    body[natsumi-compact-mode] {
      #browser {
        padding: 0 !important;
      }

      @media (
        not -moz-pref("natsumi.theme.compact-style", "toolbar")
      ) or -moz-pref("natsumi.theme.single-toolbar") {
        #sidebar-main {
          --natsumi-sidebar-height-override: calc(42px + var(--natsumi-browser-separation)) !important;
          --natsumi-compact-sidebar-offset: 1px;
        }

        #natsumi-pinned-toolbar {
          --natsumi-toolbar-override: calc(17px + var(--natsumi-browser-separation)) !important;
        }
      }

      @media (not -moz-pref("natsumi.theme.compact-style", "sidebar")) and (not -moz-pref("natsumi.theme.single-toolbar")) {
        #navigator-toolbox {
          border-radius: var(--chrome-block-radius) !important;
          min-width: calc(100% - calc(var(--natsumi-browser-separation) * 2));

          @media -moz-pref("natsumi.theme.single-toolbar") {
            margin: 0 !important;
          }
        }
      }

      @media -moz-pref("natsumi.theme.compact-style", "toolbar") and (not -moz-pref("natsumi.theme.single-toolbar")) {
        #sidebar-main {
          margin-top: var(--natsumi-browser-separation) !important;
          margin-left: var(--natsumi-browser-separation) !important;
        }

        #natsumi-pinned-toolbar {
          translate: var(--natsumi-browser-separation) var(--natsumi-browser-separation) !important;
        }
      }

      @media -moz-pref("natsumi.theme.single-toolbar") {
        #navigator-toolbox {
          margin: 0 !important;
        }
      }
    }

    @media -moz-pref("natsumi.theme.single-toolbar") {
      body:not([natsumi-compact-mode]) {
        #PersonalToolbar {
          translate: calc(var(--natsumi-browser-separation) * -1) calc(var(--natsumi-browser-separation) * -1);
        }
      }

      #sidebar-main {
        margin-top: var(--natsumi-browser-separation);
      }

      #navigator-toolbox {
        background: transparent !important;
        border: none !important;
        padding-inline: 1px;

        #urlbar-container {
          max-width: calc(var(--natsumi-sidebar-width) - calc(var(--space-medium) * 2) - 2px) !important
        }
      }

      body:not([natsumi-compact-mode]) #PersonalToolbar {
        --natsumi-bookmarks-separation: 0px !important;
        --natsumi-bookmarks-translate-override: 0 !important;
        --natsumi-bookmarks-margin-override: -47px !important;
        max-width: calc(var(--natsumi-bookmarks-width) - calc(var(--natsumi-browser-separation) * 3)) !important;
      }
    }
  }

  /* Global fixes */
  @media -moz-pref("natsumi.theme.single-toolbar") {
    #urlbar:not([open]) {
      translate: 0 !important;

      .urlbar-input-container {
        min-height: 40px !important;
      }
    }

    #navigator-toolbox {
      border-radius: 0 !important;
      background-image: none !important;
      translate: 0 !important;
    }

    #PersonalToolbar .titlebar-buttonbox {
      --natsumi-buttonbox-override: 0;
    }
  }

  @media not -moz-pref("natsumi.theme.single-toolbar") {
    #urlbar:not([open]) {
      margin-block: 4px !important;

      .urlbar-input-container {
        max-height: 30px !important;
      }
    }
  }

  #urlbar-container {
    max-height: 40px !important;
  }

  .urlbar-input-container {
    outline: none !important;
  }

  #urlbar:not([open]) {
    .urlbar-input-container {
      border: 1px solid transparent !important;
      padding: 1px !important;
    }

    .urlbar-background {
      display: flex !important;
      box-shadow: none !important;
      border: 1px solid transparent !important;
    }

    &[breakout-extend] {
      outline: 2px solid light-dark(var(--natsumi-colors-primary), var(--natsumi-primary-color));
    }
  }

  #urlbar[open] {
    .urlbar-input-container {
      padding-inline: 6px !important;
    }

    .urlbar-input-container {
      border: 1px solid transparent !important;
    }

    @media -moz-pref("natsumi.urlbar.do-not-float") {
      .urlbar-input-container {
        margin-top: 4px !important;
      }
    }
  }

  .urlbarView {
    margin-inline: 7px !important;
  }

  .urlbarView-row {
    border: none !important;
    --urlbarview-text-color-selected: currentColor;
  }

  .urlbarView-body-inner {
    border-top: var(--natsumi-mat-th-border-thin) !important;
  }

  .urlbar-background {
    inset: 0 !important;
  }

  .urlbar-input-container {
    margin-top: 0 !important;
    background: transparent !important;
    min-height: 30px;
  }

  #navigator-toolbox {
    overflow: visible !important;
  }

  #PersonalToolbar {
    border-top: none !important;
  }

  .browserContainer {
    border-radius: 0 !important;
    border: none !important;
  }

  .split-view-splitter {
    margin: 0 !important;
  }

  * {
    --toolbarbutton-icon-fill: light-dark(var(--color-gray-70), var(--color-gray-05));
    --chrome-block-radius: var(--natsumi-browser-border-radius) !important;
    --tab-background-color-hover: color-mix(currentColor 11%, transparent);
  }
}

